fix a documentation site css issue with aligning body content next to navdrawer

--- a/assets/sass-project/project.scss
+++ b/assets/sass-project/project.scss
@@ -10,7 +10,7 @@
     padding-top: ($toolbar-height * 2);
 
     @include media-breakpoint-up(lg) {
-      .navdrawer-permanent + {
+      .navdrawer-permanent ~ & {
         margin-left: $navdrawer-width-mobile;
       }
     }
@@ -18,7 +18,7 @@
 
   .doc-main {
     @include media-breakpoint-up(lg) {
-      .navdrawer-permanent + {
+      .navdrawer-permanent ~ & {
         margin-left: $navdrawer-width-mobile;
       }
     }
@@ -28,7 +28,7 @@
     position: fixed;
 
     @include media-breakpoint-up(lg) {
-      .navdrawer-permanent + {
+      .navdrawer-permanent ~ & {
         margin-left: $navdrawer-width-mobile;
       }
     }
